Fixed Award Title Sizing on Mobile

--- a/react-rewrite/src/App/Components/AwardComponent.scss
+++ b/react-rewrite/src/App/Components/AwardComponent.scss
@@ -1,7 +1,7 @@
 .award-container
 {
   display: grid;
-  grid-template-rows: auto 108.64px;
+  grid-template-rows: auto 5.65vw;
   grid-template-columns: 0;
   width: 18.2vw;
   margin-bottom: 3vw;
